k8s/minikube/namespaces.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: jam
---
apiVersion: v1
kind: Namespace
metadata:
  name: jam-storage
---
apiVersion: v1
kind: Namespace
metadata:
  name: minio-operator
